# pdfindex

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/pdf_bookmarks/: __init__.py  cli.py  config.py  processor.py  signal_handler.py
src/pdf_bookmarks/core/: __init__.py  detector.py  image.py  llm.py
src/pdf_bookmarks/generator/: __init__.py  bookmark.py  pdf.py
src/pdf_bookmarks/progress/: __init__.py  state.py
src/pdf_bookmarks/prompts/: __init__.py
src/pdf_bookmarks/utils/: __init__.py  colors.py  helpers.py  log.py
